Fix the broken CSS from 3 commits ago

--- a/Code/web/css/style.css
+++ b/Code/web/css/style.css
@@ -28,7 +28,7 @@
 
 h1,h2,h3,h4,h5,h6 {
     margin:0;
-    padding:0;
+	padding:0;
 }
 
 html {
@@ -453,7 +453,8 @@ li#categoriesTab li:hover {
 }
 .questionImage {
 	width: 150px;
-	height: 150px;
+	height: auto;
+	min-width: 100%;
 }
 
 label#searchLabel {
@@ -477,16 +478,31 @@ label#browseError {
 	height: 400px;
 	margin: 1em auto;
 	border: 1px solid black;
+    border-radius: 4px;
+	background-image: -webkit-gradient( linear, left top, left bottom, color-stop(0.31, rgb(248,249,251)), color-stop(1, rgb(233,237,241)));	
 }
 
 #view-question-left {
 	float: left;
 }
 
+#view-question-left-image {
+	width: 394px;
+	height: auto;
+	min-width: 100%;
+    border-radius: 4px;
+   	border: 4px solid black;
+}
+
+#view-question-left-image:hover {
+	border: 4px solid grey;
+}
+
 #view-question-right {
 	float: left;
 	width: 300px;
 	height: 400px;
+	
 }
 
 #view-question-right label {
@@ -507,9 +523,11 @@ label#browseError {
 }
 #submit-answer-container {
 	clear: both;
-	border: 1px solid black;
 	width: 70%;
 	margin: 0 auto;
+	border: 1px solid black;
+    border-radius: 4px;
+	background-image: -webkit-gradient( linear, left top, left bottom, color-stop(0.31, rgb(248,249,251)), color-stop(1, rgb(233,237,241)));
 }
 
 #submit-answer-container textarea {
@@ -697,7 +715,8 @@ input.decision_point {
 
 .tutorViewAnswerImage {
 	width: 100px;
-	height: 100px;
+	min-width: 100%;
+	height: auto;
 }
 
 .tutorViewAnswersMiddle {
